--- a/index.html
+++ b/index.html
@@ -173,7 +173,7 @@
     </div>
           -->
     <footer>
-      <div class="copyright">&copy; Saidu O. Kamara 2024. All Rights Reserved.</div>
+      <div class="copyright">&copy; Saidu O. Kamara 2024.</div>
       <div class="time-string" id="time-string">0:0:00</div>
     </footer>
 </div>
