--- a/index.html
+++ b/index.html
@@ -141,10 +141,11 @@
         <div class="row">
             <div class="contact-left">
                 <h1 class="sub-title" >Contact Me</h1>
-                <p><i class="fas fa-paper-plane"></i> kamarasaidu558@gmail.com</p>
+                
+               <a href= "mailto: kamarasaidu558@gmail.com"><i class="fas fa-paper-plane"></i> kamarasaidu558@gmail.com</a>
                 <p><i class="fas fa-phone-square-alt"></i> +232 79 767 376</p>
                 <div class="social-icons">
-                    <a href="www.facebook.com"><i class="fab fa-facebook"></i></a>
+                    <a href="https://www.facebook.com/Saidukamara.92"><i class="fab fa-facebook"></i></a>
                     <a href="www.facebook.com"><i class="fab fa-git"></i></a>
                     <a href="www.facebook.com"><i class="fab fa-twitter-square"></i></a>
                     <a href="www.facebook.com"><i class="fab fa-instagram"></i></a>
