--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
             <div class="contact-left">
                 <h1 class="sub-title" >Contact Me</h1>
                 
-               <a href= "mailto: kamarasaidu558@gmail.com"><i class="fas fa-paper-plane"></i> kamarasaidu558@gmail.com</a>
+               <a href= "mailto: kamarasaidu558@gmail.com"><p><i class="fas fa-paper-plane"></i> kamarasaidu558@gmail.com</p></a>
                 <p><i class="fas fa-phone-square-alt"></i> +232 79 767 376</p>
                 <div class="social-icons">
                     <a href="https://www.facebook.com/Saidukamara.92"><i class="fab fa-facebook"></i></a>
