--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
                     <a href="https://github.com/kamarasaiduo"><i class="fa fa-github-square"></i></a>
                     <a href="www.facebook.com"><i class="fab fa-twitter-square"></i></a>
                     <a href="www.facebook.com"><i class="fab fa-instagram"></i></a>
-                    <a href="www.facebook.com"><i class="fab fa-linkedin"></i></a>
+                    <a href="https://www.linkedin.com/in/saidukamara/"><i class="fab fa-linkedin"></i></a>
                 </div>
                 <a href="webimages/my-cv.pdf" download class="btn btn2" >Download my CV</a>
             </div>
