--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
                 <p><i class="fas fa-phone-square-alt"></i> +232 79 767 376</p>
                 <div class="social-icons">
                     <a href="https://www.facebook.com/Saidukamara.92"><i class="fab fa-facebook"></i></a>
-                    <a href="https://github.com/kamarasaiduo"><i class="fa fa-github-square"></i></a>
+                    <a href="https://github.com/kamarasaiduo">git</a>
                     <a href="www.facebook.com"><i class="fab fa-twitter-square"></i></a>
                     <a href="www.facebook.com"><i class="fab fa-instagram"></i></a>
                     <a href="https://www.linkedin.com/in/saidukamara/"><i class="fab fa-linkedin"></i></a>
